начало работы над лендингом

--- a/src/layout.html
+++ b/src/layout.html
@@ -8,6 +8,28 @@
   </head>
 
   <body>
-    <main id="app"></main>
+    <main id="app">
+      <div class="page page_home">
+        <section class="page__section page__section_main-info">
+          <article class="page__description">
+            <h1 class="page__title">Краеведческие туры по Челябинской области</h1>
+            <ul class="page-subtitle">
+              <li class="page-subtitle__text">для школьников 5-9 классов</li>
+              <li class="page-subtitle__text">посещение музеев</li>
+              <li class="page-subtitle__text">познавательные экскурсии</li>
+              <li class="page-subtitle__text">продолжительность тура - 2 дня</li>
+              <li class="page-subtitle__text">проживание в гостинице категории 3*-4*</li>
+              <li class="page-subtitle__text">питание</li>
+            </ul>
+          </article>
+          <article class="page-images">
+            <img class="page-images__item" src="/2.jpg" alt="">
+            <img class="page-images__item" src="/3.jpg" alt="">
+            <img class="page-images__item" src="/4.jpg" alt="">
+            <img class="page-images__item" src="/5.jpg" alt="">
+          </article>
+        </section>
+      </div>
+    </main>
   </body>
 </html>
